# OpenBCIGangLionUI

./: .gitignore  README.md  pyproject.toml
packaging/: mock_demo.spec  mock_demo_entry.py
scripts/: build_mock_demo.ps1
src/openbciganglionui/: app.py
src/openbciganglionui/backend/: CONTRACT.md  __init__.py  base.py  factory.py  mock_backend.py  models.py  record_writer.py
src/openbciganglionui/backend/brainflow/: __init__.py  backend.py  discovery.py  marker_codec.py  worker.py
src/openbciganglionui/tools/: __init__.py  backend_smoke.py  brainflow_native_probe.py
src/openbciganglionui/ui/: __init__.py  display_settings.py  style_constants.py
src/openbciganglionui/ui/pages/: __init__.py  acquisition_page.py  guide_page.py  settings_page.py
src/openbciganglionui/ui/widgets/: __init__.py  acquisition_control_bar.py  display_settings_card.py  ganglion_connection_card.py  label_manager_card.py  panel_widget.py  save_directory_card.py  stream_plot_widget.py  wheel_passthrough_expand_group_setting_card.py
src/openbciganglionui/ui/widgets/config_cards/: display_settings_card.py  ganglion_connection_card.py
src/openbciganglionui/ui/windows/: main_window.py
