[project]
name = "openbciganglionui"
version = "0.1.0"
description = "OpenBCI Ganglion desktop UI built with PyQt6 and qfluentwidgets"
readme = "README.md"
authors = [
    { name = "Zhaoyang Xin", email = "xincy22@mails.tsinghua.edu.cn" }
]
requires-python = ">=3.13"
dependencies = [
    "bleak>=2.1.1",
    "brainflow>=5.20.1,<6",
    "numpy>=2.3.3",
    "pyserial>=3.5",
    "pyqt6>=6.10.2",
    "pyqt6-fluent-widgets>=1.11.1",
]

[project.scripts]
openbciganglionui = "openbciganglionui:main"
openbci-ganglion-ui = "openbciganglionui:main"
openbciganglionui-backend-smoke = "openbciganglionui.tools.backend_smoke:main"
openbciganglionui-brainflow-native-probe = "openbciganglionui.tools.brainflow_native_probe:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
]
